fixed readme issues

--- a/Pulsar_folding_EXAMPLE.ipynb
+++ b/Pulsar_folding_EXAMPLE.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "# Pulsar Folding and Searching \n",
         "\n",
-        "Pulsar searching is a very time and compute intensive task. Searching for repeating signals within noisy data is a difficult issue alone, plus the fact massive volume of data and you got yourself a very difficult problem. \n",
+        "Pulsar searching is a very time and compute intensive task. Searching for repeating signals within noisy data is a difficult issue alone, plus the massive volume of data and you got yourself a very difficult problem. \n",
         "\n",
         "This notebook illustrates the fundemental algorithms that are used for searching and detecting regular pusles within radio spectrograms. \n",
         "\n",
