--- a/Pulsar_DedisperseV3.ipynb
+++ b/Pulsar_DedisperseV3.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Pulsar_Dedisperse",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "mount_file_id": "1Eki_Bc8b7kVKlUw_wunjkpldP330vRps",
-      "authorship_tag": "ABX9TyM9t+akSQcxmYEchWJPXPi8"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -1216,5 +1199,22 @@
         }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Pulsar_Dedisperse",
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "mount_file_id": "1Eki_Bc8b7kVKlUw_wunjkpldP330vRps",
+      "authorship_tag": "ABX9TyM9t+akSQcxmYEchWJPXPi8"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
